[package]
name = "penrose"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#penrose = { git = "https://github.com/sminez/penrose", branch = "develop" }
penrose = { git = "https://github.com/sbc64/penrose", branch = "develop", features = [ "xcb", "xcb_draw", "keysyms" ]}
#penrose = { path = "../penrose", features = [ "xcb", "xcb_draw", "keysyms" ]}
tracing = "0.1"
simplelog = "0.8.0"
foo_config =  { package = "config", version = "0.10" }
